--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "dev:server": "cd server && python3 main.py"
   },
   "devDependencies": {
+    "@types/recharts": "^1.8.29",
     "concurrently": "^9.2.0"
+  },
+  "dependencies": {
+    "recharts": "^3.1.2"
   }
 }
