feat: add automated setup script for easier project onboarding
- Add setup.sh script that automates dependency installation
- Handle Python virtual environment creation and activation
- Install both Python and Node.js dependencies automatically
- Prompt for Anthropic API key and create .env file
- Option to start both servers after setup
- Update README with simplified setup instructions

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 node_modules/
 
+# Python virtual environment
+venv/
 server/.venv/
 server/__pycache__/
 *.pyc
@@ -21,3 +23,4 @@ client/.env.production.local
 *.log
 .vscode/
 .idea/
+.env
